# minimq

examples/minimq-stm32h7/: Cargo.toml
examples/minimq-stm32h7/src/: main.rs
