[package]
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
readme = "README.md"
name = "minimq-stm32h7"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.5"
heapless = "0.5.5"
nb = "0.1.2"
log = "0.4.8"
smoltcp-nal = "0.1"
serde = {version = "1.0", features = ["derive"], default-features = false }
serde-json-core = "0.1"

[dependencies.stm32h7xx-hal]
git = "https://github.com/stm32-rs/stm32h7xx-hal"
branch = "master"
features = ["stm32h743v", "rt", "ethernet"]

[dependencies.minimq]
path = "../../"

# this lets you use `cargo fix`!
[[bin]]
name = "minimq-stm32h7"
test = false
bench = false

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
